Added slider text color customization feature. Imported from Changeset 2670

--- a/WMS/Views/Theme/Default/Shared/_Layout.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     @Scripts.Render("~/bundles/ext-language")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/unobtrusive")
+    <script src="~/Scripts/jscolor.js"></script>
 
     <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/Default/ui-settings.css"})" rel="stylesheet" type="text/css" />
 
