--- a/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
@@ -1,5 +1,4 @@
-﻿<script src="~/Scripts/jscolor.js"></script>
-@model IList<Ganedata.Core.Models.UISettingViewModel>
+﻿@model IList<Ganedata.Core.Models.UISettingViewModel>
 @using Ganedata.Core.Entities.Helpers
 @using Ganedata.Core.Entities.Enums
 
