--- a/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
@@ -60,6 +60,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.TextColor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TextColor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ForeColor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ForeColor)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.SortOrder)
         </dt>
 
