--- a/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
@@ -24,6 +24,8 @@
         settings.Columns.Add("Text");
         settings.Columns.Add("ButtonText");
         settings.Columns.Add("ButtonLinkUrl");
+        settings.Columns.Add("TextColor");
+        settings.Columns.Add("ForeColor");
         settings.Columns.Add(c =>
         {
             c.FieldName = "SortOrder";
