--- a/WMS/Views/Theme/Default/TenantWebsites/EditLayoutSettings.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/EditLayoutSettings.cshtml
@@ -41,7 +41,7 @@
     }
 </script>
 <h2><span> (@ViewBag.SiteName) Website Layout Settings</span></h2>
-
+@Html.Hidden("tenantWebsite", true)
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
