minor style fix Imported from Changeset 2673

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -2632,3 +2632,7 @@ body.modal-open {
         padding-top: 200px !important;
     }
 }
+
+.nb_sec_navwrap .nb_sec_navlist li {
+    cursor: pointer;
+}
