--- a/WMS/Views/Theme/Modern/TenantWebsites/_TenantWebSiteList.cshtml
+++ b/WMS/Views/Theme/Modern/TenantWebsites/_TenantWebSiteList.cshtml
@@ -62,7 +62,7 @@
              "<a href='" + Url.Action("Index", "ProductAllowances", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list-ol' title='Product Allowance List'></i></a>" +
              "<a href='" + Url.Action("Index", "ProductAllowanceGroups", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-th-list' title='Product Allowance Group List'></i></a>" +
              "<a href='" + Url.Action("WebsiteUISettings", "UISettings", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-paint-brush' title='Website UI Customization'></i></a>"+
-            "<a href='" + Url.Action("Index", "WebsiteDeliveryNavigations", new {siteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-truck-loading' title='Website Delivery Navigations'></i></a>"
+            "<a href='" + Url.Action("Index", "WebsiteDeliveryNavigations", new {siteId = id }) + "' data-id='" + id + "'><i class='btn ico icon-delivery-truck' title='Website Delivery Navigations'></i></a>"
 
 
  );
