--- a/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
@@ -37,7 +37,7 @@
             $("#dvfiles").show();
             var fileData = e.callbackData.split('|');
             var Fileobj = { FileName: fileData };
-            var result = $("#uploaderdefaultImage").tmpl(Fileobj);
+            var result = $("#uploaderDefaultImage").tmpl(Fileobj);
             $("#dvfiles").append(result);
             $('.se-pre-con').hide();
             $("#FileLength").val('True');
@@ -210,7 +210,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Default Image", new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.Action("_Uploader", new { Name = "ImageDefault" })
+                    @Html.Action("_Uploader", new { Name = "DefaultImage" })
                     @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
                     <br />
                     <div id="dvfiles">
@@ -259,7 +259,7 @@
 
                             <table>
                                 <tr>
-                                    <td id="tdProductfileName">@value</td>
+                                    <td id="tdProductfileName1">@value</td>
                                     <td>
                                         <p>&nbsp;</p>
                                     </td>
@@ -299,7 +299,7 @@
     </div>
 
 }
-<script id="uploaderdefaultImage" type="text/x-jquery-tmpl">
+<script id="uploaderDefaultImage" type="text/x-jquery-tmpl">
     <tr>
         <td id="tdfileName">${FileName}</td>
         <td><p>&nbsp;</p></td>
