some bug fixes Imported from Changeset 2678

--- a/WMS/Views/Theme/Default/WebsiteNavigations/_Uploader.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/_Uploader.cshtml
@@ -4,9 +4,9 @@
 
 @Html.DevExpress().UploadControl(settings =>
 {
-    if (ViewBag.ControllerName == "WebsiteNavigations")
+    if (!string.IsNullOrEmpty(ViewBag.ImageUploadControlName))
     {
-        settings.Name = ViewBag.Name;
+        settings.Name = ViewBag.ImageUploadControlName;
     }
     else
     {
