minor changes are checked in Imported from Changeset 2680

--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -190,7 +190,7 @@
 
                         </div>
                         <div class="col-sm-6 col-xs-6 text-right tot">
-                            Showing @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) to @Model.PageSize of @(Model.TotalItemCount)
+                            Showing @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) to @Model.PageSize 
 
                         </div>
                     </div>
