--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
@@ -41,20 +41,24 @@
                 }
                 i++;
             }
-            <div class="np_bannerContentOuter CountWrap">
-                <a href="#NorthumbriaCarousle"
-                   role="button"
-                   data-slide="prev"
-                   class="nb_bnr_count lft">
-                    <i class="fa fa-angle-left fa-2x"></i>
-                </a>
-                <a href="#NorthumbriaCarousle"
-                   role="button"
-                   data-slide="next"
-                   class="nb_bnr_count rgt">
-                    <i class="fa fa-angle-right fa-2x"></i>
-                </a>
-            </div>
+
+            @if (Model.Count() > 1)
+            {
+                <div class="np_bannerContentOuter CountWrap">
+                    <a href="#NorthumbriaCarousle"
+                       role="button"
+                       data-slide="prev"
+                       class="nb_bnr_count lft">
+                        <i class="fa fa-angle-left fa-2x"></i>
+                    </a>
+                    <a href="#NorthumbriaCarousle"
+                       role="button"
+                       data-slide="next"
+                       class="nb_bnr_count rgt">
+                        <i class="fa fa-angle-right fa-2x"></i>
+                    </a>
+                </div>
+            }
         </div>
         <script>
             jQuery(function ($) {
