add HtmlEditor's scripts in PlaceholderHtmlEditorPartial and comment them Imported from Changeset 2682

--- a/WMS/Views/Theme/Default/Shared/PlaceholdersHtmlEditorPartial.cshtml
+++ b/WMS/Views/Theme/Default/Shared/PlaceholdersHtmlEditorPartial.cshtml
@@ -42,4 +42,12 @@
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadCallbackRouteValues = new { Controller = "DevexHelper", Action = "ImageUpload" };
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadFolder = HtmlEditorFeaturesDemosHelper.ImagesDirectory;
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.ValidationSettings.Assign(HtmlEditorFeaturesDemosHelper.ImageUploadValidationSettings);
+
+        //settings.SettingsHtmlEditing.AllowIFrames = true;
+        //settings.SettingsHtmlEditing.AllowHTML5MediaElements = true;
+        //settings.SettingsHtmlEditing.AllowObjectAndEmbedElements = true;
+        //settings.SettingsHtmlEditing.AllowStyleAttributes = true;
+        //settings.SettingsHtmlEditing.AllowScripts = true;
+        //settings.SettingsHtmlEditing.AllowYouTubeVideoIFrames = true;
+
     }).Bind(Model.HtmlContent).GetHtml()
